--- a/net.sourceforge.eclipsetrader.ui.views/plugin.properties
+++ b/net.sourceforge.eclipsetrader.ui.views/plugin.properties
@@ -1,12 +1,38 @@
-stockwatch.openChart=Hystory Chart
+stockwatch.title=Stock Watch
+stockwatch.openChart=Historical Chart
 stockwatch.openRealtimeChart=Intraday Chart
-stockwatch.openPriceBook=Level II Data
+stockwatch.openPriceBook=Level II / Market Depth
 stockwatch.add=Add
 stockwatch.edit=Edit
 stockwatch.remove=Delete
+stockwatch.colors=Colors
+chart.title1=Historical Chart
+chart.title2=Intraday
 chart.line=Line
 chart.candle=Candle
 chart.bar=Bar
 chart.add=Add
 chart.edit=Edit
 chart.remove=Delete
+news.title=News List
+news.browser=News Browser
+book.title=Level II
+actions.next=Next
+actions.previous=Previous
+actions.update=Update
+actions.viewAll=View All
+actions.viewPeriod=View Period
+actions.viewLast2Years=View last 2 years
+actions.viewLastYear=View last year
+actions.viewLast6Months=View last 6 months
+actions.backfill=Backfill
+actions.moveDown=Move Down
+actions.moveUp=Move Up
+actions.showStockwatch=Show StockWatch
+actions.showNews=Show News
+AccumulationDistributionChart.label=Accumulation/Distribution
+BollingerBandsChart.label=Bollinger Bands
+AverageChart.label=Moving Average
+RSIChart.label=R.S.I.
+StochasticChart.label=Stochastic Oscillator
+TrendChart.label=Trend
