--- a/net.sourceforge.eclipsetrader/plugin.xml
+++ b/net.sourceforge.eclipsetrader/plugin.xml
@@ -3,7 +3,7 @@
 <plugin
    id="net.sourceforge.eclipsetrader"
    name="%pluginName"
-   version="0.9.0"
+   version="0.9.2"
    provider-name="%providerName"
    class="net.sourceforge.eclipsetrader.TraderPlugin">
 
@@ -75,21 +75,21 @@
          point="org.eclipse.ui.preferencePages">
       <page
             class="net.sourceforge.eclipsetrader.preferences.GeneralPreferencePage"
-            name="Eclipse Trader"
+            name="%pluginName"
             id="eclipsetrader"/>
       <page
             class="net.sourceforge.eclipsetrader.preferences.StartupPreferencePage"
-            name="Startup and Shutdown"
+            name="%Preferences.startup"
             category="eclipsetrader"
             id="eclipsetrader.startup"/>
       <page
             class="net.sourceforge.eclipsetrader.preferences.ProxyPreferencePage"
-            name="Proxies"
+            name="%Preferences.proxy"
             category="eclipsetrader"
             id="eclipsetrader.proxy"/>
       <page
             class="net.sourceforge.eclipsetrader.preferences.TimingPreferencePage"
-            name="Timing"
+            name="%Preferences.timing"
             category="eclipsetrader"
             id="eclipsetrader.timing"/>
    </extension>
@@ -133,17 +133,17 @@
             id="net.sourceforge.eclipsetrader.streaming">
          <action
                toolbarPath="additions"
-               label="Stop Streaming"
-               class="net.sourceforge.eclipsetrader.internal.StreamingControl"
+               label="%Actions.stopStreaming"
+               tooltip="%Actions.stopStreaming"
                icon="icons/stop.gif"
-               tooltip="Stop Streaming"
-               pulldown="false"
+               class="net.sourceforge.eclipsetrader.internal.StreamingControl"
                style="push"
+               pulldown="false"
                id="net.sourceforge.eclipsetrader.stopStreaming"/>
          <action
                toolbarPath="additions"
-               label="Start Streaming"
-               tooltip="Start Streaming"
+               label="%Actions.startStreaming"
+               tooltip="%Actions.startStreaming"
                icon="icons/run.gif"
                class="net.sourceforge.eclipsetrader.internal.StreamingControl"
                style="push"
