*** empty log message ***
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@124 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader/plugin.properties
+++ b/net.sourceforge.eclipsetrader/plugin.properties
@@ -13,3 +13,10 @@ UpdateActionSet.label = Software Updates
 UpdateActionSet.menu.label = &Software Updates
 UpdateActionSet.updates.label = &Find and Install...
 UpdateActionSet.configManager.label = &Manage Configuration...
+
+Preferences.startup=Startup and Shutdown
+Preferences.proxy=Proxies
+Preferences.timing=Timing
+
+Actions.startStreaming=Start Streaming
+Actions.stopStreaming=Stop Streaming
