*** empty log message ***
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@152 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.ui.views/plugin.properties
+++ b/net.sourceforge.eclipsetrader.ui.views/plugin.properties
@@ -17,6 +17,7 @@ chart.remove=Delete
 news.title=News List
 news.browser=News Browser
 book.title=Level II
+indices.title=Indices
 actions.next=Next
 actions.previous=Previous
 actions.update=Update
@@ -30,6 +31,7 @@ actions.moveDown=Move Down
 actions.moveUp=Move Up
 actions.showStockwatch=Show StockWatch
 actions.showNews=Show News
+actions.showIndices=Show Indices
 AccumulationDistributionChart.label=Accumulation/Distribution
 BollingerBandsChart.label=Bollinger Bands
 AverageChart.label=Moving Average
