*** empty log message ***
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@165 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.ui.views/plugin.xml
+++ b/net.sourceforge.eclipsetrader.ui.views/plugin.xml
@@ -303,7 +303,7 @@
                class="net.sourceforge.eclipsetrader.ui.views.charts.ChartActions"
                style="push"
                menubarPath="period"
-               id="view.last2year"/>
+               id="view.last2years"/>
          <action
                label="%actions.viewLastYear"
                class="net.sourceforge.eclipsetrader.ui.views.charts.ChartActions"
