Changes for the alerts system
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@176 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.ui.views/plugin.properties
+++ b/net.sourceforge.eclipsetrader.ui.views/plugin.properties
@@ -5,6 +5,8 @@ stockwatch.openPriceBook=Level II / Market Depth
 stockwatch.add=Add
 stockwatch.edit=Edit
 stockwatch.remove=Delete
+stockwatch.editAlerts=Alerts
+stockwatch.clearAlerts=Clear Alerts
 stockwatch.colors=Colors
 chart.title1=Historical Chart
 chart.title2=Intraday
