*** empty log message ***
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@181 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.ui.views/plugin.properties
+++ b/net.sourceforge.eclipsetrader.ui.views/plugin.properties
@@ -1,12 +1,13 @@
+stockwatch.menu=&Stockwatch
 stockwatch.title=Stock Watch
-stockwatch.openChart=Historical Chart
-stockwatch.openRealtimeChart=Intraday Chart
-stockwatch.openPriceBook=Level II / Market Depth
-stockwatch.add=Add
-stockwatch.edit=Edit
-stockwatch.remove=Delete
-stockwatch.editAlerts=Alerts
-stockwatch.clearAlerts=Clear Alerts
+stockwatch.openChart=&Historical Chart
+stockwatch.openRealtimeChart=&Intraday Chart
+stockwatch.openPriceBook=&Level II / Market Depth
+stockwatch.add=&Add
+stockwatch.edit=&Edit
+stockwatch.remove=&Delete
+stockwatch.editAlerts=Ale&rts
+stockwatch.clearAlerts=&Clear Alerts
 stockwatch.colors=Colors
 chart.title1=Historical Chart
 chart.title2=Intraday
